# multi-agentic

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
demo/: sample_transcript.md
docs/: architecture.md
src/multi_agentic/: __init__.py  cli.py  config.py  coordinator.py  factory.py  logging_utils.py  state.py
src/multi_agentic/agents/: base.py  intake.py  knowledge.py  resolution.py
src/multi_agentic/data/: faq.yml
src/multi_agentic/llm/: base.py  mock.py
src/multi_agentic/tools/: faq_tool.py
tests/: conftest.py  test_workflow.py
