[project]
name = "multi-agentic"
version = "0.1.0"
description = "Demonstration multi-agent support workflow"
authors = [{name = "Auto Generated"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.0.58",
    "langchain-core>=0.2.0",
    "typer>=0.9.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "rich>=13.7"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
